--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,12 @@
 .header{
     height: 7rem;
     background-color: white;
+    font-size: 1.4rem;
     border-bottom: var(--color-grey-light-2);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content{
@@ -20,9 +25,14 @@
 .sidebar{
     background-color: var(--color-grey-dark-1);
     flex: 0 0 18%;
+
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view{
-    background-color: white;
+    background-color: lightcoral;
     flex: 1;
+    height: 80rem;
 }
