--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     height: 7rem;
     background-color: white;
     font-size: 1.4rem;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: 1px solidvar(--color-grey-light-2);
 
     display: flex;
     justify-content: space-between;
