--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -119,12 +119,23 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium){
+        display:flex;
+        margin: 0;
+    } 
+
     &__item{
         position: relative;
 
         &:not(:last-child){
             margin-bottom: .5rem;
+            @media only screen and (max-width: $bp-medium){
+                margin: 0;
+            } 
         }
+        @media only screen and (max-width: $bp-medium){
+            flex: 1;
+        } 
     }
 
     &__item:before{
@@ -161,13 +172,30 @@
         
         display:flex;
         align-items: center;
+        
+        @media only screen and (max-width: $bp-medium){
+            justify-content: center;
+            padding: 2rem;
+        }        
+        @media only screen and (max-width: $bp-small){
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        } 
+        
     }
-
+    
     &__icon{
         width: 1.75rem;
         height: 1.75rem;
         margin-right:2rem;
         fill: currentColor;
+
+        @media only screen and (max-width: $bp-small){
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        } 
     }
 }
 // --------------------------------------------------------------
@@ -177,6 +205,10 @@
     text-align: center;
     padding: 2.5rem;
     color: var(--color-grey-light-4);
+    
+    @media only screen and (max-width: $bp-medium){
+        display:none;
+    } 
 }
 // --------------------------------------------------------------
 // GALLERY
@@ -194,9 +226,8 @@
 .overview{
     display:flex;
     // justify-content: space-between; - Doesn't work for this layout.
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     align-items: center;
-    background-color:white;
     
     &__heading{
         font-size: 2.25rem;
@@ -204,6 +235,11 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small){
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        } 
     }
     &__stars{
         margin-right: auto;
@@ -237,16 +273,28 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+
+        @media only screen and (max-width: $bp-small){
+            padding: 0 1.5rem;
+        } 
     }
     
     &__rating-average{
         font-size: 2.25rem;
         font-weight: 300;
+        margin-bottom: -3px;
+
+        @media only screen and (max-width: $bp-small){
+            font-size:1.8rem;
+        } 
     }
     
     &__rating-count{
         font-size: .8rem;
         text-transform: uppercase;
+        @media only screen and (max-width: $bp-small){
+            font-size:.5rem;
+        } 
     }
 }
 
@@ -263,15 +311,24 @@
     cursor: pointer;
     transition: all .2s;
     
+    & span{
+        margin-left:3px;
+        transition: margin-left .2s;
+    }
+
     &:hover{
         color: var(--color-grey-dark-1);
+        
+        span{
+            margin-left: 8px;
+        }
     }
     &:focus{
         outline: none;
         animation: pulsate 1s infinite;
-
+        
     }
-
+    
 }
 @keyframes pulsate{
     0%{
@@ -285,5 +342,205 @@
     100%{
         transform: scale(1);
         box-shadow: none;
+    }
+}
+// --------------------------------------------------------------
+// PARAGRAPH
+.paragraph:not(:last-of-type){
+    margin-bottom: 2rem;
+}
+
+
+// --------------------------------------------------------------
+// LIST
+.list{
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+    
+    display: flex;
+    flex-wrap: wrap;
+    
+    &__item{
+        flex: 0 0 50%;
+        margin-bottom: 0.7rem;
+    }
+    &__item:before{
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width:1rem;
+        margin-right: .7rem;
+        
+        // Older Browsers
+        // background-image: url(../img/chevron-thin-right.svg);
+        // background-size: cover;
+        
+        // Newer Browsers - mask
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size:cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size:cover;
+    }
+}
+
+
+// --------------------------------------------------------------
+// LIST
+.recommend{
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    
+    display: flex;
+    align-items: center;
+    
+    &__count{
+        margin-right: auto;
+    }
+
+    &__friends{
+        display:flex;
+    }
+    &__photo{
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid white;
+        
+        &:not(:last-child){
+            margin-right: -2rem;
+        }
+    }
+}
+
+// --------------------------------------------------------------
+// REVIEWS
+.review{
+    background-color: white;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden;
+    
+    @media only screen and (max-width: $bp-medium){
+        margin-bottom: 3rem;
+        padding: 2rem;
+    } 
+
+
+    &::before{
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        z-index: 1;
+    }
+    &__text{
+        margin-bottom: 2rem;
+        z-index: 10;
+        position: relative;
+    }
+    &__user{
+        display: flex;
+        align-content: center;
+        align-items: center;
+    }
+    &__photo{
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+    &__user-box{
+        margin-right: auto;
+    }
+    &__user-name{
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin-bottom: .4rem;
+    }
+    &__user-date{
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+    &__rating{
+        font-size: 2.2rem;
+        font-weight: 300;
+        color: var(--color-primary);
+    }
+}
+// --------------------------------------------------------------
+// CALL TO ACTION
+.cta{
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now{
+        text-transform: uppercase;
+        font-size: 2rem;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+    }
+    @media only screen and (max-width: $bp-medium){
+        padding: 2.5rem 0;
+    } 
+}
+
+.btn{
+    font-size: 1.5rem;
+    cursor: pointer;
+    border: none;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 3rem;
+    border: none;
+    position:relative;
+    color: white;
+    overflow: hidden;
+    background-image: 
+    linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    
+    & > * {
+        display:inline-block;
+        transition: all .2s;
+        height: 100%;
+        width: 100%
+    }
+    
+    &__visible{
+        padding: 2rem 7.5rem;
+    }
+    &__invisible{
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+    }
+
+    &:hover{   
+        background-image: 
+        linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+        animation: pulsate 1s infinite;
+    }
+    &:hover &__visible{
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible{
+        top:0;
+    }
+    
+    &:focus{
+        outline: none;
     }
 }
