--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,13 +5,18 @@
     box-shadow: var(--shadow-dark);
     
     min-height: 50rem; 
+
+    @media only screen and (max-width: $bp-largest){
+        margin: 0;
+        max-width: 100%;
+    }
 }
 
 .header{
     height: 7rem;
     background-color: white;
     font-size: 1.4rem;
-    border-bottom: 1px solidvar(--color-grey-light-2);
+    border-bottom: var(--line);
 
     display: flex;
     justify-content: space-between;
@@ -20,6 +25,10 @@
 
 .content{
     display:flex;
+
+    @media only screen and (max-width: $bp-medium){
+        flex-direction: column;
+    }
 }
 
 .sidebar{
@@ -32,6 +41,48 @@
 }
 
 .hotel-view{
+    background-color:white;
     flex: 1;
-    height: 80rem;
+}
+
+.detail{
+    display:flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+    font-size:1.4rem;
+
+    @media only screen and (max-width: $bp-medium){
+        padding: 3rem;
+    } 
+    
+    @media only screen and (max-width: $bp-small){
+        flex-direction: column;
+    } 
+
+}
+.description{
+    background-color: white;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    
+    @media only screen and (max-width: $bp-medium){
+        margin-right: 3rem;
+        padding: 2rem;
+    } 
+    
+    @media only screen and (max-width: $bp-small){
+        margin-right: 0;
+        margin-bottom: 3rem;
+    } 
+
+}
+.user-reviews{
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
