--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,12 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-smallest){
+        order: 1;
+        flex: 0 0 100%; 
+        background-color: var(--color-grey-light-2);
+    } 
+
     &__input{
         font-family: inherit;
         font-size: inherit;
@@ -373,17 +379,19 @@
         height: 1rem;
         width:1rem;
         margin-right: .7rem;
-        
         // Older Browsers
-        // background-image: url(../img/chevron-thin-right.svg);
-        // background-size: cover;
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
         
-        // Newer Browsers - mask
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size:cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size:cover;
+        @supports (-webkit-mask-image: url()) or (mask-image: url()){
+            // Newer Browsers - mask
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size:cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size:cover;
+            background-image: none;
+        }
     }
 }
 
