--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,7 +3,7 @@
     margin: 8rem auto;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
-    
+    overflow:hidden;
     min-height: 50rem; 
 
     @media only screen and (max-width: $bp-largest){
